synthv1 - an old-school polyphonic synthesizer
----------------------------------------------

ChangeLog


GIT HEAD

- Prepping bump to next v0.9.25...


0.9.24  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.
- Fixed deprecate warnings in preparation for Qt >= 6.2.


0.9.23  2021-07-07  An Early-Summer'21 Release.

- Fixed some ages old Glide/portamento potential crash bug
  (reported by AnClark).
- Add support for LV2 UI Windows platform (by AnClark).
- Sustenuto pedal controller (MIDI CC#66) is now implemented.
- Have some tolerance for buffer-size changes.
- All builds default to Qt6 (Qt >= 6.1) where available.
- CMake is now the official build system.


0.9.22  2021-05-13  A Spring'21 Release.

- All packaging builds switching to CMake.


0.9.21  2021-03-16  An End-of-Winter'21 Release.

- Fixed an old lurker, causing slight differences to voice
  on-sets, due to a wrong initial LFO Volume ramping value.
- Slightly improved eye-candyness to all graphic widgets,
  most especially on the EG widget handling, curved lines
  and gradient fills.


0.9.20  2021-02-10  A Winter'21 Release.

- When under under the NSM auspices, fix SIGTERM handler
  on exit and just hide the main-window on close (applies
  to the JACK stand-alone only).


0.9.19  20220-12-19  A Winter'20 Release.

- Fixed display of old knob/dial values on status-bar.
- Reduced formant filter coefficient slew rate, aiming
  to a tenfold DSP performance gain.
- Get a chance on bringing Wayland into the picture when
  dealing Qt static-linked deliverables.


0.9.18  2020-10-27  A Fall'20 Release.

- Upstream package naming for the JACK standalone and LV2
  plugin deliverables are suffixed to '-jack' and '-lv2',
  respectively.
- White keys on the virtual piano keyboard are now fully
  highlighted.


0.9.17  2020-09-08  Late Summer'10 Release.

- Added -n, --client-name to the JACK stand-alone client
  application command line option arguments.